Closed
Bug 1313376
Opened 6 years ago
Closed 6 years ago
Regression: Gecko does not emit accessible keyboard events after an AT is terminated and restarted
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla52
Tracking | Status | |
---|---|---|
firefox52 | --- | fixed |
People
(Reporter: jdiggs, Assigned: tbsaunde)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
687 bytes,
text/x-python
|
Details | |
1.16 KB,
patch
|
davidb
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce: 1. Launch the attached accessible-event listener in a terminal 2. Launch Firefox and give it focus 3. Press several keys (e.g. type "hello" in the search entry) 4. Press F4 to terminate the listener 5. With Firefox still running, restart the listener 6. Give focus to Firefox and repeat steps 3 and 4 Expected results: The keys pressed during step 6 would be printed in the terminal. Upon pressing F4, the listener would be terminated. (In other words, the results of step 6 should be the same as the results of steps 3 and 4.) Actual results: None of the keys pressed during step 6 are printed in the terminal and pressing F4 from within Firefox fails to terminate the listener. To work around this regression, one can quit and restart Firefox. Works as expected through: 52.0a1 (2016-09-26) (64-bit) Broken beginning with: 52.0a1 (2016-09-27) (64-bit) Possible regression of bug 1204171? Happens regardless of whether or not e10s is enabled. Marking severity as "major" because Orca relies upon keyboard event notification to perform commands (including all the commands for navigating and reading documents).
Assignee | ||
Comment 1•6 years ago
|
||
If we unregister the last key event listener we will uninstall the key event snooper, so we need to reinstall it when a new key event listener is added.
Attachment #8805196 -
Flags: review?(dbolter)
Updated•6 years ago
|
Attachment #8805196 -
Flags: review?(dbolter) → review+
Updated•6 years ago
|
Assignee: nobody → tbsaunde+mozbugs
Pushed by tsaunders@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/f686f5590975 reinstall the key event snooper when necessary r=davidb
Comment 3•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/f686f5590975
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•