bug 1313376 - reinstall the key event snooper when necessary r=davidb

If we unregister the last key event listener we will uninstall the key event
snooper, so we need to reinstall it when a new key event listener is added.